--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/136/121/original/World_map_blank_without_borders.svg.png?1722247481);
     background-size: cover;
     background-repeat: no-repeat;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -11,7 +12,37 @@ body {
     background: rgba(14, 111, 171, 0.923);
     padding: 30px;
     border-radius: 8px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+}
+
+.city {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+    border-bottom: 1px dashed rgba(255, 255, 255, 0.655);
+    padding: 20px 0;
+}
+
+h2 {
+    margin: 0;
+    font-size: 35px;
+}
+
+.date {
+    opacity: 0.7;
+    font-size: 15px;
+    margin-top: 5px;
+}
+
+.time {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.time small {
+    font-size: 12px;
+    line-height: 36px;
+    vertical-align: middle;
 }
 
 select {
@@ -25,7 +56,7 @@ select {
 h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 36px;
+    font-size: 35px;
     color: white;
 }
 
