added styling on css

--- a/src/style.css
+++ b/src/style.css
@@ -18,9 +18,13 @@ body {
 .city {
     display: flex;
     justify-content: space-between;
-    margin: 20px 0;
+    margin: 0px 10px;
     border-bottom: 1px dashed rgba(255, 255, 255, 0.655);
-    padding: 20px 0;
+    padding: 30px 10px;
+}
+
+.city:last-child {
+    border: none;
 }
 
 h2 {
@@ -30,7 +34,7 @@ h2 {
 
 .date {
     opacity: 0.7;
-    font-size: 15px;
+    font-size: 14px;
     margin-top: 5px;
 }
 
@@ -47,22 +51,25 @@ h2 {
 
 select {
     display: block;
-    width: 100%;
+    margin: 0 auto;
+    width: 65%;
     padding: 10px;
     border-radius: 4px;
     font-size: 15px;
+    margin-bottom: 30px;
+    margin-top: 35px;
 }
 
 h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
-    color: white;
+    font-size: 30px;
+    color: rgb(255, 255, 255);
 }
 
 footer {
     text-align: center;
-    color: rgba(0, 0, 0, 0.777);
+    color: rgba(0, 0, 0, 0.882);
     margin-top: 50px;
     font-size: 14px;
     font-family: "Times New Roman", Times, serif;
